--- a/simple_ToDo/Views/TodoItems/Index.cshtml
+++ b/simple_ToDo/Views/TodoItems/Index.cshtml
@@ -9,6 +9,9 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+<a type="button" class="btn btn-success btn-sm" asp-action="Index">View tasks Tasks</a>
+<a type="button" class="btn btn-success btn-sm" asp-action="Index" asp-route-complete="true">View completed tasks</a>
+<a type="button" class="btn btn-success btn-sm" asp-action="Index" asp-route-not_Started="true">View not started tasks</a>
 <table class="table">
     <thead>
         <tr>
@@ -21,27 +24,28 @@
             <th>
                 @Html.DisplayNameFor(model => model.TodoStatusId)
             </th>
- 
+
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TodoStatus.Title)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Id)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Title)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TodoStatus.Title)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
