--- a/simple_ToDo/Views/TodoItems/Index.cshtml
+++ b/simple_ToDo/Views/TodoItems/Index.cshtml
@@ -9,9 +9,9 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<a type="button" class="btn btn-success btn-sm" asp-action="Index">View tasks Tasks</a>
-<a type="button" class="btn btn-success btn-sm" asp-action="Index" asp-route-complete="true">View completed tasks</a>
-<a type="button" class="btn btn-success btn-sm" asp-action="Index" asp-route-not_Started="true">View not started tasks</a>
+<a type="button" class="btn btn-secondary" asp-action="Index">View tasks Tasks</a>
+<a type="button" class="btn btn-secondary" asp-action="Index" asp-route-complete="true">View completed tasks</a>
+<a type="button" class="btn btn-secondary" asp-action="Index" asp-route-not_Started="true">View not started tasks</a>
 <table class="table">
     <thead>
         <tr>
